add: prices interaction API
